--- a/rules/templates/rules/rowcallrules.html
+++ b/rules/templates/rules/rowcallrules.html
@@ -22,6 +22,7 @@
 
 <div id="printableArea" class="container">
     <div class="MainHeaderTitle"> 점호 수칙 </div>
+    <div class="MainGoalsTitle"> 목표: 결행방지, 근로향상</div>
    <div class="Mainapproval">
    
     <section class="rule-section">
