--- a/rules/templates/rules/driverrules.html
+++ b/rules/templates/rules/driverrules.html
@@ -23,6 +23,7 @@
 
 <div id="printableArea" class="container">
         <div class="MainHeaderTitle"> 승무원 수칙 </div>
+        <div class="MainGoalsTitle"> 목표: 안전운행, 차량관리, 수익창출</div>
     <div class="Mainapproval">
     
     <section class="rule-section">
