--- a/rules/templates/rules/fieldmanagerrules.html
+++ b/rules/templates/rules/fieldmanagerrules.html
@@ -22,6 +22,7 @@
 
 <div id="printableArea" class="container">
     <div class="MainHeaderTitle"> 현장관리자 수칙 </div>
+    <div class="MainGoalsTitle"> 목표: 결행예방, 품질개선, 차량관리예방</div>
    <div class="Mainapproval">
    
     <section class="rule-section">
